# co-ucc

./: README.md  nccl_cuda_lt.sh  nccl_cuda_lt1.sh  ucc.pc
src/components/tl/nccl/: Makefile.am  configure.m4  tl_nccl_coll.c
src/components/tl/nccl/compress/: base_tool.h  compress_nccl.cc  compress_nccl.h  compress_nccl_test.c  compress_nccl_test.h  compresskernel.cu  compresskernel.h  cuda_checks.h  get_minmax.cu  get_minmax.h
test/cmake/: CMakeCache.txt  cmake_install.cmake
